tilføjelser: javadoc og kodekommentarer, clean code refaktorering af JS, fjernede ubrugte metoder og imports, fix af SQL safe update mode og favicon